Updating first few screens.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,13 +19,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="AboutActivity"
-            android:label="@string/about"
+            android:name=".SearchByZipActivity"
+            android:label="@string/search_by_zip_label"
             android:theme="@style/MnTheme" >
         </activity>
         <activity
-            android:name="ContactListActivity"
-            android:label="@string/app_name"
+            android:name=".SearchByBrandActivity"
+            android:label="@string/search_by_brand_label"
             android:theme="@style/MnTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
