--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,44 +6,52 @@
 
     <uses-sdk android:minSdkVersion="10" />
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
+        
+        <uses-library android:name="com.google.android.maps" />
+        
         <activity
             android:name=".HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/MnTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".SearchByZipActivity"
+            android:name=".activities.SearchByZipActivity"
             android:label="@string/search_by_zip_label"
             android:theme="@style/MnTheme" >
         </activity>
         <activity
-            android:name=".SearchByBrandActivity"
+            android:name=".activities.SearchByBeerActivity"
             android:label="@string/search_by_brand_label"
             android:theme="@style/MnTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name="ContactDetailActivity"
+            android:name=".activities.ContactDetailActivity"
             android:label="@string/app_name"
             android:theme="@style/MnTheme" >
         </activity>
         <activity
-            android:name="ContactEditActivity"
+            android:name=".activities.ContactEditActivity"
             android:label="@string/app_name"
             android:theme="@style/MnTheme" >
         </activity>
         <activity
-            android:name="edu.umn.pinkpanthers.beerfinder.ContactNewActivity"
+            android:name=".activities.ContactNewActivity"
             android:label="@string/app_name"
             android:theme="@style/MnTheme" >
         </activity>
