Adding overlay items to the map view. Also trying to get the Beer list in the Venue screen to work (not quite successfull). TODO: -Make the overlay items on the MapResults screen go to a Venue screen. -Fix the Beer list on the Venue screen. -Create the Beer screen that has information about a beer. -Implement the Beer Finder Web Service to return non-lame data.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -54,6 +54,11 @@
             android:label="@string/venue_label"
             android:theme="@style/MnTheme" >
         </activity>
+        <activity
+            android:name=".activities.BeerActivity"
+            android:label="@string/beer_label"
+            android:theme="@style/MnTheme" >
+        </activity>
     </application>
 
 </manifest>
