Added search via search button to the venue list

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,6 +46,12 @@
             android:name=".activities.ListResultsActivity"
             android:label="@string/list_results_label"
             android:theme="@style/BeerFinderTheme" >
+            <intent-filter>
+                <action         android:name="android.intent.action.SEARCH"/>
+            </intent-filter>
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable"      />
         </activity>
         <activity
             android:name=".activities.VenueActivity"
